<resources>
    <string name="app_name">Training3C_27112017</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="facebook">facebook</string>
    <string name="google">Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook_app_id">637748663016121</string>
    <string name="fb_login_protocol_scheme">fb637748663016121</string>
</resources>
