<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.example.administrator.training3c_27112017.screen.LoginActivity.LoginActivityViewModel"
            />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.example.administrator.training3c_27112017.screen.LoginActivity.LoginActivityActivity"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorFade"
            android:padding="@dimen/dp_50"
            >
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_75"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_30"
                android:src="@drawable/heart"
                />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_below="@+id/iconImageView"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_below="@+id/iconImageView"
                    android:hint="@string/username"
                    android:padding="@dimen/dp_10"
                    android:inputType="text"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_below="@+id/userNameTextInput"
                >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_below="@+id/userNameTextInput"
                    android:hint="@string/password"
                    android:padding="@dimen/dp_10"
                    android:inputType="textPassword"
                    />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTextInput"
                android:gravity="end"
                android:padding="@dimen/dp_10"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                />

            <Button
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotPasswordTextView"
                android:background="@drawable/button_shape"
                android:text="@string/login"
                android:textColor="@color/colorPink"
                android:textStyle="bold"
                />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookButton"
                android:layout_width="@dimen/dp_135"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/loginButton"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/button_facebook_shape"
                android:padding="@dimen/dp_10"
                android:text="@string/facebook"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/googleButton"
                android:layout_width="@dimen/dp_135"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/loginButton"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@drawable/button_google_shape"
                android:padding="@dimen/dp_10"
                android:text="@string/google"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </RelativeLayout>
    </RelativeLayout>
</layout>
